<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadFMCG"
        android:gravity="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImgg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:textColor="#ffffff"
            android:text="@string/chsImg0"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImg2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:text="@string/chsImg2"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImg3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:text="@string/chsImg3"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:id="@+id/gpsLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/gpsAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:id="@+id/curr_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/curr_d2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/curr_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="3dp"
                android:textSize="13sp"
                android:text="Random Number"/>
            <EditText
                android:id="@+id/randomNos"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_drawable"/>
        </LinearLayout>

        <EditText
            android:id="@+id/locaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter location name"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3552e5"
        android:textColor="#ffffff"
        android:onClick="onClick"
        android:text="@string/upload"/>
    </LinearLayout>

</ScrollView>